# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2022-08-31 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_availability as a module for usage in internal
      CloudI services (previously was named cloudi_core_i_status)
    * Add the cloudi_core header files cloudi_availability.hrl and
      cloudi_constants.hrl for usage in internal CloudI services
    * Improve cloudi_service_health_check functionality
        * Allow failed TCP IPs to expire when they are missing from
          a valid DNS lookup response
        * Add tcp_test function for request/response testing
        * Improve configuration and hosts information

2022-08-29 Michael Truog   <mjtruog at protonmail dot com>

    * Add availability tracking to cloudi_service_health_check
    * Add load balancing to cloudi_service_health_check

2022-08-27 Michael Truog   <mjtruog at protonmail dot com>

    * Add restored time tracking to cloudi_service_health_check

2022-08-26 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_health_check for remote host health checks

2022-08-25 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_request_rate results
    * Improve owner service configuration option validation
    * Add linux_setcap.sh script for non-root Linux installations

2022-08-22 Michael Truog   <mjtruog at protonmail dot com>

    * Add size_erlang value to the CloudI Service API services_status output

2022-08-20 Michael Truog   <mjtruog at protonmail dot com>

    * Add log_normal_family to cloudi_statistics:describe_distribution/1

2022-08-13 Michael Truog   <mjtruog at protonmail dot com>

    * Add percentiles output to cloudi_service_request_rate

2022-08-12 Michael Truog   <mjtruog at protonmail dot com>

    * Add the cloudi_percentiles cloudi_core module

2022-08-11 Michael Truog   <mjtruog at protonmail dot com>

    * Fix the cloudi_service_shell terminate_kills_process feature